[package]
name = "markdown-forge"
version = "0.1.0"
description = "A lightweight cross-platform Markdown viewer and editor"
authors = ["Markdown Forge"]
edition = "2021"

[lib]
name = "markdown_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
